--- a/src/styles/Characters.scss
+++ b/src/styles/Characters.scss
@@ -7,8 +7,15 @@
   padding-bottom: 10px;
   margin-bottom: 10px;
 
-  h1 {
-    text-align: center;
+  .title-characters {
+    font-family: 'Poppins', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 2.5rem; 
+    font-weight: 700; 
+    line-height: 1.2; 
+    color: #333; 
+    letter-spacing: 0.05em; 
+    text-transform: capitalize; 
+    margin-bottom: 20px;
   }
 
   .form-search {
