Add Header component and style for  and make small style fixes for pages

--- a/src/styles/SingleEpisode.scss
+++ b/src/styles/SingleEpisode.scss
@@ -5,6 +5,7 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 61px;
 }
 
 .title-episode-name {
@@ -34,7 +35,6 @@
 .characters-card {
   background-color: #ffffff;
   border: none;
-  padding: 20px;
 }
 
 .characters-list-container {
@@ -58,4 +58,10 @@
   text-align: center;
   font-size: 1.5rem;
   margin-top: 20px;
+}
+
+@media (max-width: 576px) {
+  .characters-list-container {
+    justify-content: center !important;
+  } 
 }
