--- a/src/styles/Characters.scss
+++ b/src/styles/Characters.scss
@@ -1,10 +1,14 @@
+.characters-container {
+  margin-top: 61px;
+}
+
 .search-container {
   position: sticky;
   top: 0;
   z-index: 1000;
   background: #fff;
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 1.5rem;
   margin-bottom: 10px;
 
   .title-characters {
@@ -59,10 +63,16 @@
 .characters-list-container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between !important;
 }
 
 .character-card {
   width: 18rem;
   margin: 10px;
+}
+
+@media (max-width: 767px) {
+  .characters-list-container {
+    justify-content: center !important;
+  } 
 }
