--- a/src/styles/SingleCharacter.scss
+++ b/src/styles/SingleCharacter.scss
@@ -5,24 +5,7 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-  
-.back-button {
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 8px 16px;
-    border-radius: 5px;
-    color: #fff;
-    background-color: #0dcaf0;
-    border: none;
-    transition: all 0.3s ease;
-  
-    &:hover {
-        background-color: #0dcaf0 !important;
-        color: #000;
-        text-decoration: none;
-        border: 1px solid #0dcaf0 !important;
-    }
+    margin-top: 61px;
 }
   
 .title-character-name {
@@ -54,6 +37,10 @@
     background-color: #ffffff;
     border: none;
     padding: 20px;
+     
+    .card-body {
+        padding: 10px;
+    }
 }
   
 .location-button {
@@ -70,30 +57,34 @@
     border: none;
     padding: 20px;
 }
-  
-.episodes-title {
-    font-size: 1.2rem;
-    color: #333;
-}
-  
-.episodes-list {
-    max-height: 200px;
-    overflow-y: auto;
-    padding: 10px;
-  
-    .episode-item {
-      padding: 10px 15px;
+
+.episodes-card {
+    .episodes-title {
+        font-size: 1.2rem;
+        color: #333;
+        padding: 10px 30px;
     }
-  
-    .episode-button {
-        font-size: 1rem;
-        color: #0dcaf0 ;
       
-        &:hover {
-          color: #000;
+    .episodes-list {
+        max-height: 215px;
+        overflow-y: auto;
+        padding: 10px;
+      
+        .episode-item {
+          padding: 10px;
+        }
+      
+        .episode-button {
+            font-size: 1rem;
+            color: #0dcaf0 ;
+          
+            &:hover {
+              color: #000;
+            }
         }
     }
 }
+
   
 @media (max-width: 991px) {
     .character-name {
@@ -103,10 +94,21 @@
     .info-card, .episodes-card {
         padding: 15px;
     }
-  
-    .back-button {
-        font-size: 0.9rem;
-        padding: 6px 12px;
+
+    .character-card-image-container{ 
+        margin-bottom: 1.5rem;
+    }
+
+    .episodes-list {
+        max-height: fit-content;
+
+        .card-header {
+            padding: 10px;
+        }
+
+        .episode-item {
+            padding: 10px 0;
+        }
     }
 }
   
@@ -118,10 +120,5 @@
     .character-image {
         width: 80%;
         margin: 0 auto;
-    }
-  
-    .back-button {
-        width: 100%;
-        text-align: center;
     }
 }
