--- a/src/styles/Characters.scss
+++ b/src/styles/Characters.scss
@@ -1,24 +1,21 @@
+@import "variables";
+
 .characters-container {
-  margin-top: 61px;
+  margin-top: $header-height + 1px;
 }
 
 .search-container {
   position: sticky;
   top: 0;
   z-index: 1000;
-  background: #fff;
+  background: $light-bg-color;
   padding-top: 10px;
   padding-bottom: 1.5rem;
   margin-bottom: 10px;
 
   .title-characters {
-    font-family: 'Poppins', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-    font-size: 2.5rem; 
-    font-weight: 700; 
-    line-height: 1.2; 
-    color: #333; 
-    letter-spacing: 0.05em; 
-    text-transform: capitalize; 
+    @include font-setup(2.5rem, $font-weight-bold, 1.2, $text-color, $title-letter-spacing);
+    text-transform: capitalize;
     margin-bottom: 20px;
   }
 
@@ -26,33 +23,25 @@
     display: flex;
     justify-content: center;
     position: relative;
-    width: 100%; 
+    width: 100%;
 
     .form-control {
       width: 50%;
-      padding-left: 2.5rem; 
-      transition: width 0.3s ease-in-out;
-      padding-right: 1.5rem; 
-
-      @media (max-width: 768px) {
-        width: 100%;
-      }
-
-      @media (max-width: 576px) {
-        width: 100%;
-      }
+      padding-left: 2.5rem;
+      padding-right: 1.5rem;
+      @include transition(width, 0.3s, ease-in-out);
+      @include responsive-width(100%, 768px, 576px);
     }
 
     .search-icon {
       position: absolute;
-      left: 10px; 
+      left: 10px;
       top: 50%;
-      transform: translateY(-50%); 
-      color: #96c1b0; 
-      font-size: 1.2rem;
-      pointer-events: none; 
+      transform: translateY(-50%);
+      color: $search-icon-color;
+      font-size: $font-size-medium;
+      pointer-events: none;
       padding-left: 25%;
-
       @media (max-width: 768px) {
         padding-left: 0;
       }
@@ -60,19 +49,17 @@
   }
 }
 
-.characters-list-container{
+.characters-list-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between !important;
+
+  @media (max-width: 767px) {
+    justify-content: center !important;
+  }
 }
 
 .character-card {
   width: 18rem;
   margin: 10px;
-}
-
-@media (max-width: 767px) {
-  .characters-list-container {
-    justify-content: center !important;
-  } 
 }
