--- a/src/styles/SingleCharacter.scss
+++ b/src/styles/SingleCharacter.scss
@@ -1,59 +1,61 @@
+@import "variables";
+
 .single-character-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 61px;
+    background-color: $light-bg-color;
+    border-radius: $border-radius;
+    box-shadow: $shadow-light;
+    margin-top: $header-height;
 }
-  
+
 .title-character-name {
-    font-family: 'Poppins', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-    font-size: 2.5rem; 
-    font-weight: 700; 
-    line-height: 1.2; 
-    color: #333; 
-    letter-spacing: 0.05em; 
-    text-transform: capitalize; 
+    font-family: $font-family;
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 1.2;
+    color: $text-color;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
     margin-bottom: 20px;
 }
-  
+
 .character-card {
-    background-color: white;
+    background-color: $light-bg-color;
     border: none;
     text-align: center;
     width: 100%;
 }
-  
+
 .character-image {
     width: 100%;
     height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: $border-radius;
+    box-shadow: $shadow-strong;
 }
-  
+
 .info-card {
-    background-color: #ffffff;
+    background-color: $light-bg-color;
     border: none;
     padding: 20px;
-     
+
     .card-body {
         padding: 10px;
     }
 }
-  
+
 .location-button {
     font-size: 1rem;
-    color: #0dcaf0;
-  
+    color: $highlight-color;
+
     &:hover {
-        color: #000;
+        color: $black-color;
     }
 }
-  
+
 .episodes-card-single {
-    background-color: #ffffff;
+    background-color: $light-bg-color;
     border: none;
     padding: 20px;
 }
@@ -61,41 +63,40 @@
 .episodes-card {
     .episodes-title {
         font-size: 1.2rem;
-        color: #333;
+        color: $text-color;
         padding: 10px 30px;
     }
-      
+
     .episodes-list {
         max-height: 215px;
         overflow-y: auto;
         padding: 10px;
-      
+
         .episode-item {
-          padding: 10px;
+            padding: 10px;
         }
-      
+
         .episode-button {
             font-size: 1rem;
-            color: #0dcaf0 ;
-          
+            color: $highlight-color;
+
             &:hover {
-              color: #000;
+                color: $black-color;
             }
         }
     }
 }
 
-  
 @media (max-width: 991px) {
     .character-name {
         font-size: 2rem;
     }
-  
+
     .info-card, .episodes-card {
         padding: 15px;
     }
 
-    .character-card-image-container{ 
+    .character-card-image-container {
         margin-bottom: 1.5rem;
     }
 
@@ -111,12 +112,12 @@
         }
     }
 }
-  
+
 @media (max-width: 576px) {
     .character-name {
         font-size: 1.8rem;
     }
-  
+
     .character-image {
         width: 80%;
         margin: 0 auto;
