--- a/src/styles/SingleLocation.scss
+++ b/src/styles/SingleLocation.scss
@@ -1,26 +1,28 @@
+@import "variables";
+
 .single-location-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: $dark-bg-color;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: $shadow-light;
   margin-top: 61px;
 }
   
 .title-location-name {
-  font-family: 'Poppins', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-family: $font-family;
   font-size: 2.5rem; 
   font-weight: 700; 
   line-height: 1.2; 
-  color: #333; 
+  color: $text-color; 
   letter-spacing: 0.05em; 
   text-transform: capitalize; 
   margin-bottom: 20px;
 }
   
 .location-card {
-  background-color: #f9f9f9 !important;
+  background-color: $dark-bg-color !important;
   border: none;
   text-align: center;
   width: 50%;
@@ -34,7 +36,7 @@
 }
 
 .characters-card {
-  background-color: #ffffff;
+  background-color: $light-bg-color;
   border: none;
 }
 
@@ -47,7 +49,7 @@
   color: #0dcaf0;
 
   &:hover {
-    color: #000;
+    color: $black-color;
   }
 }
   
