--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $header-height: 60px;
-$navbar-bg-color: #A8D4E9;
+$navbar-bg-color: #a8d4e9;
 $navbar-border-color: #bbb;
 $text-color: #333;
 $black-color: #000;
@@ -42,4 +42,3 @@ $border-radius: 8px;
     }
   }
 }
-  
